--- a/style.css
+++ b/style.css
@@ -52,3 +52,16 @@ h2{
     padding-left: 20px;
     border-radius: 5px;
 }
+#full-stack{
+    border-left:6px solid;
+    border-image: linear-gradient(orange, tomato);
+    border-image-slice: 1;
+}
+#junior-dev{
+    border-left: 6px solid;
+    border-image: linear-gradient(blue, cyan);
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
+}
